# repo-sapiens

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .readthedocs.yaml  .secrets.baseline  ADD_TO_REPO.md  BENCHMARK_DELIVERABLES.md  BUILDER_QA_SYSTEM.md  CHANGELOG.md  CI_CD_GUIDE.md  CI_CD_PACKAGE_SUMMARY.md  CLAUDE.md  CONFIG_TESTS_SUMMARY.md  CONTRIBUTING.md  CONTRIBUTOR_LICENSE_AGREEMENT.md  CREDENTIAL_SYSTEM_IMPLEMENTATION_SUMMARY.md  DELIVERABLES.md  DEPLOYMENT_GUIDE.md  DEVELOPER_SETUP.md  DOCSTRING_ENHANCEMENT_SUMMARY.md  Dockerfile  ERROR_HANDLING_IMPLEMENTATION.md  ERROR_HANDLING_QUICK_REFERENCE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_REPORT.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION_SUMMARY.md  LICENSE  MANIFEST.in  MYPY_STATUS.md  Makefile  OLLAMA_SETUP.md  PACKAGE_CHECKLIST.md  PHASE2_SUMMARY.md  PHASE_3_COMPLETE.md  PHASE_4_QUICK_REFERENCE.md  PHASE_4_SUMMARY.md  QUICK_START.md  (+17 more)
.agents/reports/: documentation-accuracy-review-2026-01-06.md
.builder/: credentials.salt
.gitea/workflows/: ARTIFACT_SYSTEM.md  approved.yaml  automation-daemon.yaml  automation-trigger.yaml  automation-trigger.yaml.disabled  build-artifacts.yaml  ci.yaml  complete-cicd-example.yaml  execute-task.yaml  label-routing-guide.md  label-triggered.yaml  monitor.yaml  (+11 more)
.sbom/: sbom.cyclonedx.json  sbom.spdx.json
agents/: README.md  STATUS.md
automation/: README.md  __init__.py  __main__.py  __version__.py  exceptions.py  main.py  webhook_server.py
docs/: AGENT_COMPARISON.md  ARCHITECTURE.md  AUDIT_INDEX.md  CONTRIBUTING.md  COPILOT_SETUP.md  COVERAGE_REPORT.md  CREDENTIALS.md  CREDENTIAL_QUICK_START.md  DEPLOYMENT_GUIDE.md  DEVELOPER_SETUP.md  DOCSTRING_AUDIT.md  DOCSTRING_IMPROVEMENTS.md  DOCSTRING_INDEX.md  ERROR_HANDLING.md  GETTING_STARTED.md  GITEA_NEW_REPO_TUTORIAL.md  GITHUB_E2E_TEST_PLAN.md  GITHUB_OPENROUTER_SETUP.md  GITLAB_SETUP.md  GOOSE_SETUP.md  INDEX.md  INIT_COMMAND_GUIDE.md  INPUT_VALIDATION_AUDIT.md  LOCAL_EXECUTION_WORKFLOW.md  MAINTAINERS.md  MIGRATION.md  PERFORMANCE_BENCHMARKS.md  QUICK_REFERENCE.md  RELEASE_PROCESS.md  SECRETS_SCAN.md  SECRETS_SCAN_SUMMARY.txt  SECURITY_AUDIT.md  SECURITY_AUDIT_INDEX.md  SECURITY_FIXES_PATCHES.md  SECURITY_QUICK_REFERENCE.md  SECURITY_SCAN_INDEX.md  SECURITY_SUMMARY.txt  SYSTEM_PROMPTS.md  TYPE_CHECKING.md  WORKFLOW_REFERENCE.md  (+7 more)
flappy-bird/: README.md  audio.js  bird.js  game.js  index.html  obstacles.js  styles.css  ui.js
hello-python-test/: .gitignore  .readthedocs.yml  BUILD_AND_UPLOAD.md  COMPREHENSIVE_TEST_DELIVERY.md  DELIVERABLES.md  DELIVERY_CHECKLIST.md  DOCS_QUICK_START.md  DOCS_SUMMARY.md  DOCUMENTATION.md  LICENSE  LOGGING_IMPLEMENTATION_SUMMARY.md  LOGGING_QUICK_START.md  LOGGING_SETUP.md  MANIFEST.in  QUICK_START.txt  README.md  SUMMARY.md  TESTING_GUIDE.md  TESTS_TREE.txt  pyproject.toml  test_install.py
hello-python-test/.builder/: credentials.salt
hello-python-test/.github/workflows/: docs.yml
hello-python-test/docs/: LOGGING.md  Makefile  README.md  build.sh  requirements.txt  serve.sh
hello-python-test/docs/_build/html/: .buildinfo  faq.html  genindex.html  getting-started.html  index.html  installation.html  objects.inv  py-modindex.html  release-notes.html  search.html  searchindex.js
hello-python-test/docs/_build/html/.doctrees/: environment.pickle  faq.doctree  getting-started.doctree  index.doctree  installation.doctree  release-notes.doctree
hello-python-test/docs/_build/html/.doctrees/api/: core.doctree  modules.doctree
hello-python-test/docs/_build/html/.doctrees/developer-guide/: contributing.doctree  development.doctree  testing.doctree
hello-python-test/docs/_build/html/.doctrees/user-guide/: configuration.doctree  overview.doctree  workflows.doctree
hello-python-test/docs/_build/html/_modules/: index.html
hello-python-test/docs/_build/html/_modules/repo_sapiens/: core.html
hello-python-test/docs/_build/html/_sources/: faq.rst.txt  release-notes.rst.txt
hello-python-test/docs/_build/html/_sources/api/: core.rst.txt  modules.rst.txt
hello-python-test/docs/_build/html/_sources/developer-guide/: contributing.rst.txt  development.rst.txt  testing.rst.txt
hello-python-test/docs/_build/html/_sources/user-guide/: workflows.rst.txt
hello-python-test/docs/_build/html/api/: core.html  modules.html
hello-python-test/docs/_build/html/developer-guide/: contributing.html  development.html  testing.html
hello-python-test/docs/_build/html/user-guide/: configuration.html  overview.html  workflows.html
hello-python-test/docs/source/: conf.py  getting-started.rst  index.rst  installation.rst
hello-python-test/docs/source/_static/: custom.css
hello-python-test/docs/source/_templates/: module.rst
hello-python-test/docs/source/user-guide/: configuration.rst  overview.rst
hello-python-test/examples/: async_with_logging.py  cli_with_logging.py
hello-python-test/src/repo_sapiens/: __init__.py  core.py  logging_config.py
hello-python-test/tests/: PROJECT_STRUCTURE.md  TEST_REFERENCE.md  TEST_SUMMARY.md  conftest.py  test_logging.py
hello-python-test/tests/integration/: README.md  __init__.py  test_workflow_e2e.py
hello-python-test/tests/unit/: README.md  test_cli_commands.py  test_cli_main.py  test_helpers.py
plans/: 1-flappy-bird-game.md  cli-redesign-phase1-2.md  credential-management-implementation.md  example-plan.md  git-discovery-implementation.md  pypi-critical-fixes.md  pypi-distribution.md  pypi-quick-checklist.md  release-v0.1.0-implementation.md  template-system-implementation.md
repo_sapiens/: README.md  __init__.py  __main__.py  __version__.py  enums.py  exceptions.py  main.py  webhook_server.py
scripts/: Dockerfile.gitlab-webhook  bootstrap-gitea.sh  bootstrap-github.sh  bootstrap-gitlab.sh  gitea-cleanup.sh  gitlab-cleanup.sh  gitlab-comment-webhook.py  install-docker-compose.sh  run-gitea-e2e.sh  run-github-comprehensive-e2e.sh  run-github-e2e.sh  run-gitlab-e2e.sh  run-gitlab-tests.sh  run-validation.sh  setup.sh  ssh-diagnose.sh  ssh-monitor.sh  test-openrouter.sh  test-workflow-tiers.sh
tests/: conftest.py
(+488 files in other folders)
