[project]
name = "repo-sapiens"
version = "0.2.0"
description = "Intelligent repository automation and management tool"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    {name = "savorywatt", email = "maintainer@savorywatt.com"}
]
keywords = ["automation", "repository", "build", "ci", "management", "gitea", "ai", "workflow"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Quality Assurance",
]

dependencies = [
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.25.0",
    "structlog>=23.2.0",
    "click>=8.1.0",
    "pyyaml>=6.0",
    "aiofiles>=23.2.0",
    "keyring>=24.0.0",
    "cryptography>=41.0.0",
    "gitpython>=3.1.40",
    "jinja2>=3.1.3",
    "pygithub>=2.1.1",  # GitHub API client
    "PyNaCl>=1.5.0",    # GitHub secret encryption
]

[project.optional-dependencies]
monitoring = [
    "prometheus-client>=0.19.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
]
analytics = ["plotly>=5.18.0"]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-benchmark>=4.0.0",
    "black>=23.12.0",
    "ruff>=0.1.8",
    "mypy>=1.7.0",
    "pre-commit>=3.6.0",
    "bandit[toml]>=1.7.6",
]
all = ["repo-sapiens[monitoring,analytics]"]

[project.scripts]
automation = "automation.main:cli"
builder = "automation.main:cli"
repo-agent = "automation.main:cli"

[project.urls]
Homepage = "https://github.com/savorywatt/repo-sapiens"
Documentation = "https://github.com/savorywatt/repo-sapiens#readme"
Repository = "https://github.com/savorywatt/repo-sapiens"
"Bug Tracker" = "https://github.com/savorywatt/repo-sapiens/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["automation*"]

[tool.setuptools.package-data]
automation = [
    "config/*.yaml",
    "py.typed",
    "templates/**/*.j2",
    "templates/**/*.json",
]

[tool.black]
line-length = 100
target-version = ["py311"]
# Prevent wrapping lines that Ruff prefers unwrapped
skip-string-normalization = false
skip-magic-trailing-comma = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "C4", "DTZ", "T10", "SIM"]

[tool.ruff.lint.per-file-ignores]
"hello-python-test/tests/**/*.py" = ["SIM117", "F841"]  # Nested with statements and unused vars acceptable in tests
"hello-python-test/docs/source/conf.py" = ["A001"]  # Sphinx requires copyright variable
"tests/**/*.py" = ["SIM117", "F841"]  # Nested with statements and unused vars acceptable in tests

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "automation.templates.examples.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "automation.providers.gitea_rest",
    "automation.providers.github_rest",
    "automation.providers.ollama",
    "automation.providers.external_agent",
    "automation.providers.agent_provider",
    "automation.providers.git_provider",
    "automation.webhook_server",
    "automation.monitoring.dashboard",
    "automation.monitoring.metrics",
    "automation.cli.init",
    "automation.cli.credentials",
    "automation.engine.stages.qa",
    "automation.engine.stages.approval",
    "automation.engine.stages.pr_review",
    "automation.engine.stages.implementation",
    "automation.engine.stages.execution",
    "automation.engine.stages.fix_execution",
    "automation.engine.stages.plan_review",
    "automation.engine.stages.merge",
    "automation.engine.stages.proposal",
    "automation.engine.stages.code_review",
    "automation.engine.multi_repo",
    "automation.engine.recovery",
    "automation.engine.parallel_executor",
    "automation.engine.checkpointing",
    "automation.engine.orchestrator",
    "automation.config.credential_fields",
]
# Complex provider/stage implementations - will be refactored for strict typing later
ignore_errors = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--cov=automation --cov-report=html --cov-report=term-missing --cov-fail-under=10"

[tool.bandit]
# Bandit security linter configuration
exclude_dirs = [
    "tests/",
    ".venv/",
    "venv/",
    ".git/",
    "dist/",
    "build/",
    "*.egg-info/",
]

# Exclude specific tests that are false positives for this project
skips = [
    "B101",  # assert_used - we use asserts in tests and validation
    "B601",  # paramiko_calls - not using paramiko
    "B602",  # subprocess_popen_with_shell_equals_true - reviewed usages are safe
]

# Severity levels: LOW, MEDIUM, HIGH
# Confidence levels: LOW, MEDIUM, HIGH
# Only report issues with MEDIUM or HIGH confidence
severity = "MEDIUM"
confidence = "MEDIUM"

[tool.bandit.assert_used]
# Allow asserts in test files and validation code
skips = ["*/tests/*", "*/test_*.py"]
