[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repo-sapiens"
version = "0.0.2"
description = "Intelligent repository automation and management tool"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "savorywatt", email = "maintainer@savorywatt.com"}
]
keywords = ["automation", "repository", "build", "ci", "management"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "structlog>=24.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.0",
    "pytest-timeout>=2.1",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
    "isort>=5.12",
    "structlog>=24.0.0",
]
docs = [
    "sphinx>=6.0",
    "sphinx-rtd-theme>=1.2.0",
    "sphinx-autobuild>=2021.3.14",
    "sphinx-autodoc-typehints>=1.22.0",
    "sphinx-copybutton>=0.5.1",
]

[project.urls]
Homepage = "https://github.com/savorywatt/repo-sapiens"
Repository = "https://github.com/savorywatt/repo-sapiens"
Issues = "https://github.com/savorywatt/repo-sapiens/issues"
Documentation = "https://repo-sapiens.readthedocs.io"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
repo_sapiens = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --strict-markers"
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.black]
line-length = 100
target-version = ['py38']
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_glob = [".tox", "venv", ".venv"]
